# whalefall

./: .gitignore  AGENT_RUNBOOK.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: privacy-and-safety.md
examples/: activity-cache.example.json  follower.sample.js  following.sample.js  keep-handles.example.txt
skills/: README.md
skills/whalefall-agent-operator/: SKILL.md
skills/whalefall-release-maintainer/: SKILL.md
src/whalefall/: __init__.py  activity.py  archive.py  cli.py  models.py  review.py  scoring.py  timeutil.py  ui.py
tests/: conftest.py  test_review.py  test_ui.py
